src/objects/PM_Approved_WH__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <formula>Warehouse__r.city__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>PM Approved WH</relationshipLabel>
        <relationshipName>PM_Approved_WH</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Warehouse_Number__c</fullName>
        <formula>Warehouse__r.Warehouse_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warehouse Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>PM Approved WH</relationshipLabel>
        <relationshipName>PM_Approved_WH</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PM Approved WH</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMAWH-{0000000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Approved WH</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>